[package]
name = "register_bond"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lib]
crate-type = ['cdylib']

[dependencies]
iroha_trigger.workspace = true

panic-halt.workspace = true
dlmalloc.workspace = true

[build-dependencies]
iroha_wasm_builder = { git = "https://github.com/hyperledger/iroha", branch = "stable" }
